--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,8 +13,8 @@
   </header>
   <div class="sidenav">
     <nav>
-      <a href="#">Home</a>
-      <a href="commands.html">Commands</a>
+      <a href="/">Home</a>
+      <a href="commands">Commands</a>
     </nav>
   </div>
   <div class="content">
