Link font so it works

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
   <link href="css/styles.css" type="text/css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Knewave" rel="stylesheet">
 </head>
 
 <body>
